--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900;
+  font-display: block;
+  src: url('https://assets.vercel.com/raw/upload/v1587415301/fonts/2/inter-var-latin.woff2')
+    format('woff2');
+}
+
 :root {
   --gap-quarter: 0.25rem;
   --gap-half: 0.5rem;
@@ -13,9 +21,7 @@
 
   --radius: 8px;
 
-  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  --font-sans: 'Inter', sans-serif;
   --font-mono: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
@@ -29,25 +35,15 @@
 html,
 body {
   background: var(--bg);
+  font-family: var(--font-sans);
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
   color: var(--fg);
   font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
-  background-image: radial-gradient(#ddd 1px, transparent 1px),
-    radial-gradient(#ddd 1px, transparent 1px);
-  background-position: 0 0, 25px 25px;
-  background-attachment: fixed;
-  background-size: 50px 50px;
-
-  /* Hack */
-  overflow-x: hidden;
 }
 
 code[class*='language-'],
@@ -287,10 +283,17 @@ h1 {
 }
 
 h2 {
-  font-weight: 300;
-  font-size: 1.25rem;
-  letter-spacing: -0.02rem;
-  color: var(--accents-3);
+  font-size: 36px;
+  padding-top: 30px;
+}
+
+h3 {
+  font-size: 26px;
+  padding-top: 20px;
+}
+
+h4 {
+  margin: 1rem 0;
 }
 
 .video {
@@ -348,11 +351,6 @@ code {
   .explanation {
     padding: 0 1rem 4rem;
   }
-
-  h2 {
-    font-size: 0.95rem;
-    letter-spacing: 0;
-  }
 }
 
 .dotted {
@@ -375,4 +373,18 @@ footer span:nth-child(3) {
 
 footer span:nth-child(3) a {
   color: inherit;
+}
+
+#progress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: var(--fg);
 }
