--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -1,3 +1,9 @@
+.layout {
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .layout img {
   margin: auto;
   max-width: 98%;
@@ -5,7 +11,9 @@
   height: auto;
 }
 
-.layout h1,
-.layout h2 {
-  text-align: center;
+@media (max-width: 900px) {
+  .layout {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
 }
