--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: 'Inter';
+  font-style: normal;
   font-weight: 100 600 900;
-  font-display: block;
+  font-display: optional;
   src: url('https://assets.vercel.com/raw/upload/v1587415301/fonts/2/inter-var-latin.woff2')
     format('woff2');
 }
