--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -1,4 +1,5 @@
 .hero {
+  height: 400px;
   background: conic-gradient(
     from 262.66deg at 65.88% 50%,
     #2ac769 -15deg,
@@ -7,13 +8,10 @@
     #008535 440.63deg
   );
   width: 100%;
-  height: 400px;
+  grid-column: 1 / 4;
 }
 
 .title {
-  position: absolute;
-  margin-top: -300px;
-
   font-style: normal;
   font-weight: bold;
   font-size: 144px;
@@ -78,18 +76,4 @@
   /* "Black" */
 
   color: #38473e;
-}
-
-@media (max-width: 800px) {
-  .hero {
-    height: 640px;
-  }
-  .title {
-    font-size: 64px;
-    line-height: 64px;
-    margin-top: -168px;
-    /* or 100% */
-
-    letter-spacing: -0.06em;
-  }
 }
