--- a/src/styles/nonprofits.module.css
+++ b/src/styles/nonprofits.module.css
@@ -2,7 +2,7 @@
   display: grid;
   justify-content: center;
   margin: 42px auto 0px;
-  gap: 0px 0px;
+  gap: 32px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas:
@@ -11,13 +11,38 @@
 }
 
 .c {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   grid-area: c;
 }
 .a {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   grid-area: a;
 }
 .b {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   grid-area: b;
+}
+
+.info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  overflow: hidden;
+  gap: 32px;
+  justify-items: start;
+}
+
+.location {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .links {
