--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -1,19 +1,23 @@
 .layout {
-  max-width: 880px;
-  margin-left: auto;
-  margin-right: auto;
+  display: grid;
+  grid-template-columns: 1fr 880px 1fr;
+}
+
+.layout > * {
+  grid-column: 2;
 }
 
 .layout img {
   margin: auto;
-  max-width: 98%;
+  max-width: 100%;
   display: block;
   height: auto;
 }
 
 @media (max-width: 900px) {
   .layout {
-    padding-left: 24px;
-    padding-right: 24px;
+    display: grid;
+    grid-template-columns: 1fr min(60ch, calc(100% - 64px)) 1fr;
+    grid-column-gap: 32px;
   }
 }
