--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,15 @@
 @font-face {
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 400 600 700;
+  src: url(https://fonts.gstatic.com/s/manrope/v4/xn7gYHE41ni1AdIRggexSvfedN4.woff2)
+    format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+@font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 100 500 600 900;
@@ -16,8 +27,8 @@
   --bg: #f4f1f0;
   --gray: #d6d6d6;
   --fg: #38473e;
-  --ctc: #166132;
-  --verde: #39ad64;
+  --ctc: #199c5c;
+  --verde: #9df2ba;
   --accent: #611a16;
   --rojo: #ad0c05;
 
@@ -28,8 +39,9 @@
 
   --radius: 8px;
 
-  --font-sans: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --font-sans: 'Manrope', 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
   --font-mono: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
@@ -235,14 +247,6 @@ pre.dark[class*='language-'] {
   }
 }
 
-.explanation {
-  font-size: 1rem;
-  width: 35rem;
-  max-width: 100vw;
-  padding: 0 2rem;
-  background: var(--bg);
-  margin: var(--gap-half) auto;
-}
 figure {
   font-size: 0.85rem;
   color: #999;
@@ -356,6 +360,10 @@ p {
 
 a {
   text-decoration: none;
+}
+
+img {
+  border-radius: 8px;
 }
 
 p a:hover,
