--- a/src/styles/nonprofits.module.css
+++ b/src/styles/nonprofits.module.css
@@ -2,7 +2,7 @@
   display: grid;
   justify-content: center;
   margin: 42px auto 0px;
-  gap: 32px;
+  gap: 12px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas:
@@ -80,4 +80,34 @@
 
 .name a {
   color: inherit;
+}
+
+.buttons {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  border-radius: 4px;
+}
+
+.primarybutton {
+  padding: 12px 20px;
+  background: rgba(187, 231, 186, 0.4);
+  border-radius: 12px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
+
+  letter-spacing: 0.01em;
+
+  /* CTC Brand Dark Green */
+
+  color: var(--ctc);
+}
+
+.primarybutton:hover {
+  color: #f4f1f0;
+  transform: scale(0.9);
 }
