--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,13 +1,16 @@
 .grid {
+  margin-top: 64px;
+  background-color: var(--ctc);
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   font-weight: 600;
 }
 
 .colophon {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  gap: 14px;
 }
 
 .left {
@@ -36,4 +39,14 @@
 
   color: var(--ctc);
   padding: 8px 16px;
+}
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.space {
+  margin-left: 10px;
 }
