--- a/src/styles/nonprofits.module.css
+++ b/src/styles/nonprofits.module.css
@@ -1,3 +1,21 @@
+.info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  overflow: hidden;
+  gap: 32px;
+  justify-items: start;
+}
+
+.banner {
+  max-width: 600px;
+}
+
+.faq {
+  display: grid;
+  gap: 20px 0px;
+}
+
 .photogrid {
   display: grid;
   justify-content: center;
@@ -27,15 +45,6 @@
   height: 100%;
   object-fit: cover;
   grid-area: b;
-}
-
-.info {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
-  overflow: hidden;
-  gap: 32px;
-  justify-items: start;
 }
 
 .location {
@@ -98,16 +107,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
-  /* identical to box height, or 150% */
-
   letter-spacing: 0.01em;
-
-  /* CTC Brand Dark Green */
-
   color: var(--ctc);
-}
-
-.primarybutton:hover {
-  color: #f4f1f0;
-  transform: scale(0.9);
+  cursor: pointer;
 }
