--- a/src/styles/students.module.css
+++ b/src/styles/students.module.css
@@ -21,6 +21,12 @@
   margin: 0;
 }
 
+.buttonGroup {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+}
+
 .buttons {
   margin-top: 32px;
   display: flex;
@@ -37,54 +43,89 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
-  /* identical to box height, or 150% */
-
   letter-spacing: 0.01em;
-
-  /* CTC Brand Dark Green */
-
   color: var(--ctc);
-}
-
-.roles {
-  width: 100%;
-  grid-column: 1 / 4;
-  background-color: #199c5c;
-  padding: 20px;
-}
-
-.carousel {
-  grid-column: 2;
-}
-
-.controlbutton {
-  border: 1px red solid;
-  color: black;
-  background-color: black;
-}
-
-.sliderActive {
-  background-color: var(--fg);
-  content: '';
-  width: 24px;
-  height: 2px;
-  border-radius: 1px;
-  margin: 0 2px;
-}
-
-.sliderInactive {
-  background-color: var(--gray);
-  content: '';
-  width: 24px;
-  height: 2px;
-  border-radius: 1px;
-  margin: 0 2px;
+  cursor: pointer;
 }
 
 .panel {
   display: grid;
+  max-width: 880px;
+  justify-content: center;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 32px;
+  gap: 30px;
+  align-items: center;
+  margin: 0px auto;
+}
+
+.title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 2em;
+}
+
+.desc {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+  color: #daffde;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  padding: 3px;
+  list-style: none;
+  background-color: var(--indent);
+  border-radius: 10px;
+  margin-top: 32px;
+}
+
+.list .item {
+  white-space: nowrap;
+  position: relative;
+  margin-bottom: 0;
+  line-height: 1;
+}
+
+.button {
+  position: relative;
+  margin: 0;
+  padding: 8px 16px;
+  color: var(--white);
+  line-height: 1;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
+.button:focus {
+  cursor: pointer;
+}
+
+.label {
+  position: relative;
+  z-index: 2;
+}
+
+.active {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: var(--ctc);
+  border-radius: 7px;
+  box-shadow: var(--shadow);
+  content: '';
 }
 
 .photogrid {
@@ -92,6 +133,7 @@
   grid-template-columns: repeat(4, 1fr);
   overflow: hidden;
   gap: 20px;
+  margin: 64px 0px;
 }
 
 .photo {
@@ -105,28 +147,10 @@
   grid-column: span 2;
 }
 
-.questions {
+.faq {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px 40px;
-}
-
-.selector {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 25%);
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 64px;
-}
-
-.choice {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
-
-.choice:hover {
-  color: green;
 }
 
 @media (max-width: 800px) {
@@ -140,5 +164,13 @@
 
   .photo:first-child {
     grid-column: span 2;
+  }
+
+  .panel {
+    grid-template-columns: 1fr;
+  }
+
+  .faq {
+    grid-template-columns: 1fr;
   }
 }
