--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,11 +1,3 @@
-.grid {
-  margin-top: 64px;
-  background-color: var(--ctc);
-  display: grid;
-  grid-template-columns: 1fr;
-  font-weight: 600;
-}
-
 .colophon {
   display: flex;
   flex-direction: column;
@@ -28,16 +20,13 @@
 }
 
 .name {
-  font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 16px;
-  line-height: 24px;
-  /* identical to box height, or 150% */
+  line-height: 21px;
+  letter-spacing: 0.02px;
 
   text-align: center;
-  letter-spacing: -0.05em;
-
-  color: var(--ctc);
+  color: var(--accents-1);
   padding: 8px 16px;
 }
 
