--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,12 @@
 @font-face {
   font-family: 'Manrope';
   font-style: normal;
-  font-weight: 400 600 700;
+  font-weight: 400 600 700 800;
   src: url(https://fonts.gstatic.com/s/manrope/v4/xn7gYHE41ni1AdIRggexSvfedN4.woff2)
     format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 100 500 600 900;
-  font-display: optional;
-  src: url('https://assets.vercel.com/raw/upload/v1587415301/fonts/2/inter-var-latin.woff2')
-    format('woff2');
 }
 
 :root {
@@ -41,9 +32,8 @@
 
   --radius: 8px;
 
-  --font-sans: 'Manrope', 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
+  --font-sans: 'Manrope', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --font-mono: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
@@ -333,7 +323,7 @@ h5 {
 
 h6 {
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1.5;
   margin-top: 2.5rem;
   margin-bottom: 0.5rem;
   letter-spacing: -0.33px;
