--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -42,4 +42,8 @@
     grid-template-columns: 1fr min(60ch, calc(100% - 64px)) 1fr;
     grid-column-gap: 32px;
   }
+
+  .fullbleedhero {
+    padding: 0px 32px;
+  }
 }
