--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -95,7 +95,7 @@
   background: var(--bg);
   margin: auto;
   margin-top: 32px;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 1rem;
   line-height: 150%;
   /* or 36px */
@@ -116,7 +116,7 @@
 
   .title {
     font-size: 2.5em;
-    line-height: 3em;
+    line-height: 2.5em;
     margin-top: 0;
   }
 
@@ -131,11 +131,13 @@
   }
 
   .primarybutton {
+    font-weight: 500;
     font-size: 12px;
     padding: 12px 16px;
+    letter-spacing: -1px;
   }
 
-  .explanation {
+  .explanation > p {
     font-weight: 400;
     letter-spacing: -1px;
   }
