--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -58,11 +58,6 @@
 
 .buttons {
   margin: 32px auto;
-  display: flex;
-  gap: 20px;
-  flex-direction: row;
-  align-items: flex-start;
-  border-radius: 4px;
 }
 
 .primarybutton {
@@ -70,12 +65,12 @@
   background: var(--gray);
   border-radius: 12px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 16px;
+  line-height: 24px;
   letter-spacing: 0.01em;
   color: var(--accents-2);
   cursor: pointer;
-  margin-top: 24px;
 }
 
 .primarybutton:hover {
@@ -115,8 +110,8 @@
   }
 
   .title {
-    font-size: 2.5em;
-    line-height: 2.5em;
+    font-size: 2em;
+    line-height: 2em;
     margin-top: 0;
   }
 
@@ -130,15 +125,8 @@
     margin-top: 0;
   }
 
-  .primarybutton {
-    font-weight: 500;
-    font-size: 12px;
-    padding: 12px 16px;
-    letter-spacing: -1px;
-  }
-
   .explanation > p {
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: -1px;
   }
 }
