--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -56,50 +56,46 @@
   color: var(--verde);
 }
 
-.buttons {
-  margin: 32px auto;
+.photogrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  overflow: hidden;
+  gap: 8px;
+  max-height: 220px;
+  justify-items: start;
 }
 
-.primarybutton {
-  padding: 12px 20px;
-  background: var(--gray);
-  border-radius: 12px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.01em;
-  color: var(--accents-2);
-  cursor: pointer;
+.photo {
+  display: block;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  margin: 0;
 }
 
-.primarybutton:hover {
-  color: var(--ctc);
+.photo:first-child {
+  grid-column: span 2;
+  display: block;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  margin: 0;
 }
 
-.explanation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.mission {
+  display: grid;
+  grid-template-columns: 1fr;
   justify-content: center;
+  overflow: hidden;
+  gap: 32px;
+  align-items: center;
+  justify-items: start;
 }
 
-.explanation > p {
-  width: min(100%, 55ch);
-  padding: 0 2rem;
-  background: var(--bg);
-  margin: auto;
-  margin-top: 32px;
-  font-weight: 700;
-  font-size: 1rem;
-  line-height: 150%;
-  /* or 36px */
-
-  letter-spacing: -0.01em;
-
-  /* "Black" */
-
-  color: var(--accents-2);
+.values {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
 }
 
 @media (max-width: 800px) {
@@ -121,12 +117,11 @@
     margin-top: 0;
   }
 
-  .buttons {
-    margin-top: 0;
+  .photogrid {
+    grid-template-columns: 1fr;
+    max-height: none;
   }
-
-  .explanation > p {
-    font-weight: 700;
-    letter-spacing: -1px;
+  .values {
+    grid-template-columns: 1fr;
   }
 }
