--- a/src/styles/students.module.css
+++ b/src/styles/students.module.css
@@ -48,6 +48,31 @@
   cursor: pointer;
 }
 
+.explanation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.explanation > p {
+  width: min(100%, 55ch);
+  padding: 0 2rem;
+  background: var(--bg);
+  margin: auto;
+  margin-top: 32px;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 150%;
+  /* or 36px */
+
+  letter-spacing: -0.01em;
+
+  /* "Black" */
+
+  color: var(--accents-2);
+}
+
 .panel {
   display: grid;
   max-width: 880px;
@@ -186,5 +211,14 @@
 
   .faq {
     grid-template-columns: 1fr;
+  }
+
+  .buttons {
+    margin-top: 0;
+  }
+
+  .explanation > p {
+    font-weight: 700;
+    letter-spacing: -1px;
   }
 }
