--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -56,6 +56,27 @@
   color: var(--verde);
 }
 
+.buttons {
+  margin: 32px auto;
+}
+
+.primarybutton {
+  padding: 12px 20px;
+  background: var(--gray);
+  border-radius: 12px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.01em;
+  color: var(--accents-2);
+  cursor: pointer;
+}
+
+.primarybutton:hover {
+  color: var(--ctc);
+}
+
 .photogrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -102,7 +123,7 @@
   .alert {
     font-weight: 400;
     font-size: 0.6em;
-    margin-top: 50%;
+    margin-top: 30%;
   }
 
   .title {
