--- a/src/styles/nonprofits.module.css
+++ b/src/styles/nonprofits.module.css
@@ -7,8 +7,15 @@
   justify-items: start;
 }
 
-.banner {
-  max-width: 600px;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  overflow: hidden;
+  gap: 32px;
+  align-items: center;
+  justify-items: start;
+  margin: 64px 0px 64px 0px;
 }
 
 .faq {
@@ -101,18 +108,24 @@
 
 .primarybutton {
   padding: 12px 20px;
-  background: rgba(187, 231, 186, 0.4);
+  background: var(--ctc);
   border-radius: 12px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 0.01em;
-  color: var(--ctc);
+  color: var(--verde);
   cursor: pointer;
 }
 
+.primarybutton:hover {
+  color: var(--white);
+}
+
 @media (max-width: 800px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
   .info {
     grid-template-columns: 1fr;
   }
