--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -7,6 +7,20 @@
   grid-column: 2;
 }
 
+.fullbleedalert {
+  background: var(--accent);
+  color: var(--white);
+  width: 100%;
+  grid-column: 1 / 4;
+  padding: 16px auto;
+  min-height: 64px;
+  margin-top: 0px;
+  justify-content: center;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
 .fullbleedhero {
   width: 100%;
   grid-column: 1 / 4;
@@ -17,6 +31,7 @@
   background: var(--ctc);
   width: 100%;
   margin-bottom: 32px;
+  height: 80vh;
 }
 
 .fullbleedfooter {
