--- a/src/styles/team.module.css
+++ b/src/styles/team.module.css
@@ -29,14 +29,15 @@
 }
 
 .name {
-  font-weight: 700;
+  font-weight: 500;
   margin: 12px auto 0 auto;
   text-align: center;
 }
 
 .role {
-  font-weight: 700;
+  font-weight: 500;
   text-align: center;
+  color: var(--accents-3);
 }
 
 @media (max-width: 800px) {
