--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -1,13 +1,3 @@
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  background: var(--ctc);
-  width: 100%;
-  margin-bottom: 32px;
-}
-
 .title {
   font-family: 'akzidenz-grotesk-extended';
   font-size: 4em;
@@ -127,6 +117,17 @@
   gap: 32px;
 }
 
+.roles {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  gap: 32px;
+}
+
+.role {
+  margin: 0 32px;
+}
+
 @media (max-width: 800px) {
   .title {
     font-size: 3em;
@@ -143,6 +144,10 @@
   }
 
   .values {
+    grid-template-columns: 1fr;
+  }
+
+  .roles {
     grid-template-columns: 1fr;
   }
 }
