--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -117,6 +117,17 @@
   gap: 32px;
 }
 
+.nonprofits {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  gap: 16px;
+}
+
+.nonprofit {
+  margin: 0 8px;
+}
+
 .roles {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -148,6 +159,10 @@
   }
 
   .roles {
+    grid-template-columns: 1fr;
+  }
+
+  .nonprofits {
     grid-template-columns: 1fr;
   }
 }
